@@ -11,6 +11,7 @@ Changes in 1.4.2:
  o update documentation of event_loop and event_base_loop; from Tani Hosokawa.
  o detect integer types properly on platforms without stdint.h
  o Remove "AM_MAINTAINER_MODE" declaration in configure.in: now makefiles and configure should get re-generated automatically when Makefile.am or configure.in chanes.
+ o do not insert event into list when evsel->add fails
 
 Changes in 1.4.1-beta:
  o free minheap on event_base_free(); from Christopher Layne
